2013-09-10  Allan McRae  <allan@archlinux.org>

	[BZ #15748]
	* manual/arith.texi (Parsing of Floats): Clarify
	cross-reference.

	[BZ #15849]
	* manual/install.texi (Running make install): Mention
	--enable-pt-chown.
	* INSTALL: Regenerated.

2013-09-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* csu/init-first.c (_init): Remove the !SHARED condition around
	FPU control word initialization.
	* elf/dl-support.c (_dl_fpu_control): New variable.
	(_dl_aux_init) <AT_FPUCW>: Initialize it.
	* math/test-fpucw.c [!FPU_CONTROL] (FPU_CONTROL): New macro.
	(main): Replace _FPU_DEFAULT with FPU_CONTROL throughout.
	* math/test-fpucw-static.c: New file.
	* math/test-fpucw-ieee.c: New file.
	* math/test-fpucw-ieee-static.c: New file.
	* math/Makefile (tests): Add `test-fpucw-ieee' and
	`$(tests-static)'.
	(tests-static): New variable.
	[($(build-shared),yes)] ($(addprefix $(objpfx),$(tests))): Move
	dependency to...
	[($(build-shared),yes)]
	($(addprefix $(objpfx),$(filter-out $(tests-static),$(tests)))):
	... this.
	[($(build-shared),yes)] ($(addprefix $(objpfx),$(tests-static))):
	New dependency.

2013-09-09  Allan McRae  <allan@archlinux.org>

	[BZ #15939]
	* manual/string.texi (Collation Functions): Fix typo in
	strcoll example.
	Reported by Suren Karapetyan <me@suren.karapetyan.name>.

	[BZ #15893]
	* stdlib/isomac.c (get_null_defines): Fix memory leak.

	[BZ #15892]
	* libio/memstream.c (open_memstream): Fix memory leak.
	* libio/wmemstream.c (open_wmemstream): Likewise.

	[BZ #15895]
	* nscd/netgroupcache.c: Fix nesting of ifdefs.

2013-09-09  Will Newton  <will.newton@linaro.org>

	* malloc/Makefile: Add tst-realloc to tests.
	* malloc/tst-realloc.c: New file.

2013-09-09  Allan McRae  <allan@archlinux.org>

	[BZ #15844]
	* COPYING: Update from GNU website to fix FSF address.
	* COPYING.LIB: Likewise.

2013-09-06  David S. Miller  <davem@davemloft.net>

	* po/zh_TW.po: Update Chinese (traditional) translation from
	translation project.
